--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -29,9 +30,11 @@
             <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
 
             <ul class="site-nav list">
-              <li class="list-item"><a href="" class="link current">Студия</a></li>
-              <li class="list-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-              <li class="list-item"><a href="" class="link">Контакты</a></li>
+              <li class="site-nav__item"><a href="" class="site-nav__link current">Студия</a></li>
+              <li class="site-nav__item">
+                <a href="./portfolio.html" class="site-nav__link">Портфолио</a>
+              </li>
+              <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
             </ul>
           </nav>
 
