--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -28,11 +29,11 @@
           <nav class="header-page-nav">
             <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
             <ul class="site-nav list">
-              <li class="list-item"><a href="index.html" class="link">Студия</a></li>
-              <li class="list-item">
-                <a href="./portfolio.html" class="link current">Портфолио</a>
+              <li class="site-nav__item"><a href="index.html" class="site-nav__link">Студия</a></li>
+              <li class="site-nav__item">
+                <a href="./portfolio.html" class="site-nav__link current">Портфолио</a>
               </li>
-              <li class="list-item"><a href="" class="link">Контакты</a></li>
+              <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
             </ul>
           </nav>
 
