maked some ref code

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
   </head>
 
   <body class="page">
@@ -351,61 +351,61 @@
     </main>
 
     <!-- Футер -->
-    <footer class="adress">
+    <footer class="footer-adress">
       <div class="contact-wrap">
         <div class="container">
           <div class="contact-link">
-            <a href="./index.html" class="logo-footer"
-              ><span class="accent">Web</span><span class="accent-logo">Studio</span></a
+              <a href="./index.html" class="logo-footer"
+              ><span class="accent">Web</span>Studio</a
             >
             <address>
-              <ul class="contacts list">
-                <li class="contact-adress">
+              <ul class="footer-contacts list">
+                <li class="footer-contacts__item">
                   <a
                     href="https://goo.gl/maps/pnNfETj2RrLpbSRX6"
                     target="_blank"
                     rel="nooper noreferrer"
-                    class="adress-title"
+                    class="footer-contacts__text"
                     >г. Киев, пр-т Леси Украинки, 26</a
                   >
                 </li>
-                <li class="contact-adress">
-                  <a href="mailto:info@devstudio.com" class="contact-item"> info@devstudio.com</a>
+                <li class="footer-contacts__item">
+                  <a href="mailto:info@devstudio.com" class="footer-contacts__link"> info@devstudio.com</a>
                 </li>
-                <li class="contact-adress">
-                  <a href="tel:+380991111111" class="contact-item"> +38 099 111 11 11</a>
+                <li class="footer-contacts__item">
+                  <a href="tel:+380991111111" class="footer-contacts__link"> +38 099 111 11 11</a>
                 </li>
               </ul>
             </address>
           </div>
-          <div class="contacts-wrap-link">
-            <div class="contacts-link">
-              <p class="contacts-link-title">Присоединяйтесь</p>
-              <ul class="contacts-link-list list">
-                <li class="contacts-icon">
-                  <a href="" class="contacts-icon-link">
-                    <svg class="contacts-icons" width="20" height="20">
+          <div class="social-contacts">
+            <div class="social-contacts__wrapper">
+              <p class="social-contacts__title">Присоединяйтесь</p>
+              <ul class="social-contacts__list list">
+                <li class="social-contacts__item">
+                  <a href="" class="social-contacts__link">
+                    <svg class="social-contacts__icon" width="20" height="20">
                       <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="contacts-icon">
-                  <a href="" class="contacts-icon-link">
-                    <svg class="contacts-icons" width="20" height="20">
+                <li class="social-contacts__item">
+                  <a href="" class="social-contacts__link">
+                    <svg class="social-contacts__icon" width="20" height="20">
                       <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="contacts-icon">
-                  <a href="" class="contacts-icon-link">
-                    <svg class="contacts-icons" width="20" height="20">
+                <li class="social-contacts__item">
+                  <a href="" class="social-contacts__link">
+                    <svg class="social-contacts__icon" width="20" height="20">
                       <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="contacts-icon">
-                  <a href="" class="contacts-icon-link">
-                    <svg class="contacts-icons" width="20" height="20">
+                <li class="social-contacts__item">
+                  <a href="" class="social-contacts__link">
+                    <svg class="social-contacts__icon" width="20" height="20">
                       <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -413,15 +413,14 @@
               </ul>
             </div>
           </div>
-          <div class="contacts-wrap-email">
-            <p class="contacts-email-title">Подпишитесь на рассылку</p>
-            <form>
-              <div class="contacts-input-btn">
-                <input type="search" name="search" placeholder="E-mail" class="contacts-input" />
-                <button type="submit" class="contacts-email-btn">
+          <div class="footer-email__wrapper">
+            <p class="footer-email__title">Подпишитесь на рассылку</p>
+            <form class="form">
+              <div class="form__wrapper">
+                <input type="search" name="search" placeholder="E-mail" class="form__input" />
+                <button type="submit" class="form__btn">
                   Подписаться
-
-                  <svg class="contacts-btn-icon" width="24" height="24">
+                  <svg class="form__icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-icon-send"></use>
                   </svg>
                 </button>
