--- a/portfolio.html
+++ b/portfolio.html
@@ -37,18 +37,18 @@
             </ul>
           </nav>
 
-          <ul class="contact list">
-            <li class="contacts-item">
-              <a href="mailto:info@devstudio.com" class="contact-title">
-                <svg class="contacts-icon-header" width="16" height="12">
+          <ul class="header-contacts list">
+            <li class="header-contacts__item">
+              <a href="mailto:info@devstudio.com" class="header-contacts__title">
+                <svg class="header-contacts__icon" width="16" height="12">
                   <use href="./images/symbol-defs.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
               >
             </li>
-            <li class="contacts-item">
-              <a href="tel:+380991111111" class="contact-title">
-                <svg class="contacts-icon-header" width="10" height="16">
+            <li class="header-contacts__item">
+              <a href="tel:+380991111111" class="header-contacts__title">
+                <svg class="header-contacts__icon" width="10" height="16">
                   <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
@@ -63,7 +63,7 @@
       <section class="section">
         <div class="container">
           <h1 class="section-title visually-hidden">Наши проекты</h1>
-          <ul class="button-primary-list list">
+          <ul class="button-primary__list list">
             <li><button type="button" class="button-primary">Все</button></li>
             <li><button type="button" class="button-primary">Веб-сайты</button></li>
             <li><button type="button" class="button-primary">Приложения</button></li>
@@ -71,171 +71,171 @@
             <li><button type="button" class="button-primary">Маркетинг</button></li>
           </ul>
           <ul class="projects list">
-            <li class="projects-item">
-              <a href="" class="projects-link">
-                <div class="projects-wrap">
+            <li class="projects__item">
+              <a href="" class="projects__link">
+                <div class="projects__wrapper">
                   <img src="./images/image.jpg" alt="Ноутбук" width="370" height="294" />
-                  <p class="projects-text">
+                  <p class="projects__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
 
-                <div class="projects-class">
-                  <h2 class="projects-title">Технокряк</h2>
-                  <p class="projects-work">Веб-сайт</p>
+                <div class="projects__box">
+                  <h2 class="projects__title">Технокряк</h2>
+                  <p class="projects__work">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="projects-item">
-              <a href="" class="projects-link">
-                <div class="projects-wrap">
+            <li class="projects__item">
+              <a href="" class="projects__link">
+                <div class="projects__wrapper">
                   <img
                     src="./images/image.1.jpg"
                     alt="Двое мужчин играют в баскетбол"
                     width="370"
                     height="294"
                   />
-                  <p class="projects-text">
+                  <p class="projects__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
 
-                <div class="projects-class">
-                  <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
-                  <p class="projects-work">Дизайн</p>
+                <div class="projects__box">
+                  <h2 class="projects__title">Постер New Orlean vs Golden Star</h2>
+                  <p class="projects__work">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="projects-item">
-              <a href="" class="projects-link">
-                <div class="projects-wrap">
+            <li class="projects__item">
+              <a href="" class="projects__link">
+                <div class="projects__wrapper">
                   <img src="./images/image.2.jpg" alt="Лого ресторана" width="370" height="294" />
-                  <p class="projects-text">
+                  <p class="projects__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
 
-                <div class="projects-class">
-                  <h2 class="projects-title">Ресторан Seafood</h2>
-                  <p class="projects-work">Приложение</p>
+                <div class="projects__box">
+                  <h2 class="projects__title">Ресторан Seafood</h2>
+                  <p class="projects__work">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="projects-item">
-              <a href="" class="projects-link">
-                <div class="projects-wrap">
+            <li class="projects__item">
+              <a href="" class="projects__link">
+                <div class="projects__wrapper">
                   <img src="./images/image.3.jpg" alt="Наушники" width="370" height="294" />
-                  <p class="projects-text">
+                  <p class="projects__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
 
-                <div class="projects-class">
-                  <h2 class="projects-title">Проект Prime</h2>
-                  <p class="projects-work">Маркетинг</p>
+                <div class="projects__box">
+                  <h2 class="projects__title">Проект Prime</h2>
+                  <p class="projects__work">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="projects-item">
-              <a href="" class="projects-link">
-                <div class="projects-wrap">
+            <li class="projects__item">
+              <a href="" class="projects__link">
+                <div class="projects__wrapper">
                   <img src="./images/image.4.jpg" alt="Две коробки" width="370" height="294" />
-                  <p class="projects-text">
+                  <p class="projects__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
 
-                <div class="projects-class">
-                  <h2 class="projects-title">Проект Boxes</h2>
-                  <p class="projects-work">Приложение</p>
+                <div class="projects__box">
+                  <h2 class="projects__title">Проект Boxes</h2>
+                  <p class="projects__work">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="projects-item">
-              <a href="" class="projects-link">
-                <div class="projects-wrap">
+            <li class="projects__item">
+              <a href="" class="projects__link">
+                <div class="projects__wrapper">
                   <img
                     src="./images/image.5.jpg"
                     alt="Монитор комп'ютера"
                     width="370"
                     height="294"
                   />
-                  <p class="projects-text">
+                  <p class="projects__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
 
-                <div class="projects-class">
-                  <h2 class="projects-title">Inspiration has no Borders</h2>
-                  <p class="projects-work">Веб-сайт</p>
+                <div class="projects__box">
+                  <h2 class="projects__title">Inspiration has no Borders</h2>
+                  <p class="projects__work">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="projects-item">
-              <a href="" class="projects-link">
-                <div class="projects-wrap">
+            <li class="projects__item">
+              <a href="" class="projects__link">
+                <div class="projects__wrapper">
                   <img src="./images/image.6.jpg" alt="Открытый журнал" width="370" height="294" />
-                  <p class="projects-text">
+                  <p class="projects__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
 
-                <div class="projects-class">
-                  <h2 class="projects-title">Издание Limited Edition</h2>
-                  <p class="projects-work">Дизайн</p>
+                <div class="projects__box">
+                  <h2 class="projects__title">Издание Limited Edition</h2>
+                  <p class="projects__work">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="projects-item">
-              <a href="" class="projects-link">
-                <div class="projects-wrap">
+            <li class="projects__item">
+              <a href="" class="projects__link">
+                <div class="projects__wrapper">
                   <img src="./images/image.7.jpg" alt="Проект LAB" width="370" height="294" />
-                  <p class="projects-text">
+                  <p class="projects__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
 
-                <div class="projects-class">
-                  <h2 class="projects-title">Проект LAB</h2>
-                  <p class="projects-work">Маркетинг</p>
+                <div class="projects__box">
+                  <h2 class="projects__title">Проект LAB</h2>
+                  <p class="projects__work">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="projects-item">
-              <a href="" class="projects-link">
-                <div class="projects-wrap">
+            <li class="projects__item">
+              <a href="" class="projects__link">
+                <div class="projects__wrapper">
                   <img
                     src="./images/image.8.jpg"
                     alt="Робота за проектом"
                     width="370"
                     height="294"
                   />
-                  <p class="projects-text">
+                  <p class="projects__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
 
-                <div class="projects-class">
-                  <h2 class="projects-title">Growing Business</h2>
-                  <p class="projects-work">Приложение</p>
+                <div class="projects__box">
+                  <h2 class="projects__title">Growing Business</h2>
+                  <p class="projects__work">Приложение</p>
                 </div>
               </a>
             </li>
@@ -245,13 +245,11 @@
     </main>
 
     <!-- Футер -->
-     <footer class="footer-adress">
+    <footer class="footer-adress">
       <div class="contact-wrap">
         <div class="container">
           <div class="contact-link">
-              <a href="./index.html" class="logo-footer"
-              ><span class="accent">Web</span>Studio</a
-            >
+            <a href="./index.html" class="logo-footer"><span class="accent">Web</span>Studio</a>
             <address>
               <ul class="footer-contacts list">
                 <li class="footer-contacts__item">
@@ -264,7 +262,9 @@
                   >
                 </li>
                 <li class="footer-contacts__item">
-                  <a href="mailto:info@devstudio.com" class="footer-contacts__link"> info@devstudio.com</a>
+                  <a href="mailto:info@devstudio.com" class="footer-contacts__link">
+                    info@devstudio.com</a
+                  >
                 </li>
                 <li class="footer-contacts__item">
                   <a href="tel:+380991111111" class="footer-contacts__link"> +38 099 111 11 11</a>
