--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="widht=device-widht, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,7 +25,7 @@
 
   <body class="page">
     <!-- Шапка сайта-->
-    <header class="header-page">
+    <!-- <header class="header-page">
       <div class="container">
         <div class="box">
           <nav class="header-page-nav">
@@ -58,7 +60,7 @@
           </ul>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Услуги -->
@@ -70,7 +72,7 @@
       </div>
 
       <!-- Процесс роботы -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container">
           <h2 class="section-title visually-hidden">Процесс роботы</h2>
 
@@ -123,10 +125,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Чем мы занимаемся -->
-      <section class="section gallery">
+      <!-- <section class="section gallery">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="gallery__list list">
@@ -144,7 +146,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Наша команда -->
 
@@ -299,7 +301,10 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      -->
+
+      <!-- Клиенты -->
+      <!-- <section class="section">
         <div class="container">
           <h2 class="clients__title">Постоянные клиенты</h2>
           <ul class="clients list">
@@ -347,11 +352,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- Футер -->
-    <footer class="footer-adress">
+    <!-- <footer class="footer-adress">
       <div class="contact-wrap">
         <div class="container">
           <div class="contact-link">
@@ -429,10 +434,10 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Модальное окно -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal__close-btn" data-modal-close>
           <svg class="modal__close-icon" width="11" height="11">
@@ -496,7 +501,7 @@
           <button type="submit" class="modal__btn">Отправить</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js">
       (() => {
         const refs = {
